--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -20,3 +20,15 @@
   .button:hover {
     background-color: #772106;
   }
+
+  @media (max-width: 767px) {
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .buttons button {
+      margin-bottom: 10px;
+    }
+  }
