--- a/src/components/SiteCard/sitecard.css
+++ b/src/components/SiteCard/sitecard.css
@@ -35,3 +35,12 @@ h2{
     object-fit: cover;
     border-radius: 50%;
 }
+
+@media only screen and (max-width: 768px) {
+    .imgsite{
+        flex-direction: column;
+        align-items: center;
+    
+    }
+    
+}
