--- a/src/pages/itinerario1/pk1/pk1.css
+++ b/src/pages/itinerario1/pk1/pk1.css
@@ -15,3 +15,13 @@
     justify-content: space-between;
     padding: 10px;
 }
+
+@media (max-width: 768px) {
+    .buttons {
+      position: static; 
+      display: block; 
+      margin-top: 10px; 
+      width: auto; 
+      text-align: center; 
+    }
+  }
