--- a/src/components/IntroItinerary/introitinerary.css
+++ b/src/components/IntroItinerary/introitinerary.css
@@ -3,13 +3,9 @@
     border-radius: 16px;  
     
 }
-
-.div-con-elementos {
-    margin-bottom: 10px; /* Esto reduce el espacio en la parte inferior del div */
-}
   
 h1, p.introsubtitle {
-    margin: 0; /* Esto elimina los márgenes predeterminados del h1 y del p */
+    margin: 0; 
 }
 
 
@@ -61,13 +57,7 @@ h1{
   }
 
 
-@media (min-width: 1024px) {
-    .imgplace {
-        max-width: 661px; 
-        max-height: 356px;
-        margin: 40px;
-    }
-}
+
 
 ul {
     list-style-type: none;
@@ -82,3 +72,35 @@ ul li {
     line-height: normal; 
 }
 
+@media (min-width: 1024px) {
+    .imgplace {
+        max-width: 661px; 
+        max-height: 356px;
+        margin: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+        .itinerarytittle {
+          flex-direction: column; 
+          align-items: center; 
+          text-align: center; 
+        }
+      
+        .exploradorintro {
+          margin-bottom: 20px; 
+        }
+
+        .listintroblock{
+            flex-direction: column;
+        }
+
+        .imgplace {
+            max-width: 90%;
+            height: auto; 
+            margin: 20px;
+        }
+      }
+
+        
+    
